# Octopal

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
desktop/: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
docker/: Dockerfile
docs/: a2a_setup.md  connectors_list.md  memory.md  ops_tools_and_templates.md  runtime_plans.md  skills.md  telegram_bot_features.md  web-surfing-benchmark.md  worker_isolation.md
scripts/: benchmark_web_backends.py  bootstrap.ps1  bootstrap.sh  export_gateway_openapi.py  octopal.ps1  octopal.sh  self_control_supervisor.py  sync_worker_templates.py  tool_call_bench.py  worker_bench.py
tests/: conftest.py  test_a2a_gateway.py  test_access_and_ws_fixes.py  test_adaptation.py  test_agent_loop_improvements.py  test_agent_worker_contracts.py  test_approval_formatting.py  test_browser_actions.py  test_browser_snapshot.py  test_calendar_mcp_server.py  test_cli_config.py  test_cli_connectors.py  test_cli_dashboard_runtime_status.py  test_cli_episodes.py  test_cli_memory_proposals.py  test_cli_restart.py  test_cli_skill_install.py  test_cli_tools_resolve.py  test_cli_update.py  test_cli_version_check.py  test_cli_webapp_build.py  test_codex_provider_catalog.py  test_computer_use_tool.py  test_configure_llm.py  test_configure_workspace_bootstrap.py  test_connector_tools.py  test_connectors.py  test_context_compiler.py  test_context_pruning.py  test_dashboard_actions_helpers.py  test_dashboard_filters.py  test_dashboard_incidents.py  test_dashboard_slo_noise.py  test_dashboard_v2_api.py  test_embeddings_factory.py  test_execution_episodes.py  test_experiment_tools.py  test_filesystem_hardening.py  (+96 more)
(+379 files in other folders)
