[project]
name = "broodmind"
version = "0.4.3"
description = "BroodMind autonomous AI agent platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "BroodMind" }]

dependencies = [
  "aiogram>=3.5.0",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "litellm>=1.50.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "playwright>=1.49.0",
  "typer>=0.12.0",
  "uvicorn>=0.27.0",
  "websockets>=12.0",
  "jsonschema>=4.22.0",
  "structlog>=24.1.0",
  "colorama>=0.4.6",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1",
  "mcp>=1.0.0",
  "telegramify-markdown>=0.5.4",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.9.0",
]

[project.scripts]
broodmind = "broodmind.cli.main:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
broodmind = ["*.md", "runtime/queen/prompts/*.md"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "T20", "SIM"]
ignore = ["E501"] # Handled by black

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
